refs #166 Fix target_images-related templates
- Fix target_images factoies

--- a/app/views/target_images/index.html.erb
+++ b/app/views/target_images/index.html.erb
@@ -2,7 +2,6 @@
 <%= link_to 'New Target image', new_target_image_path %>
 <br>
 
-<!-- Define all of the tiles: -->
 <% @target_images.each do |target_image| %>
   <div class="box">
     <div class="boxInner">
@@ -11,7 +10,7 @@
       <%= link_to 'Edit', edit_target_image_path(target_image) %>
       <%= link_to 'Destroy', target_image, method: :delete, data: { confirm: 'Are you sure?' } %>
       <%= link_to(image_tag(target_image.data.url), { controller: 'target_images', action: 'show', id: target_image.id.to_s }) %>
-      <div class="titleBox"><%= target_image.title.to_s %></div>
+      <div class="titleBox"><%= target_image.data.content_type %></div>
     </div>
   </div>
 <% end %>
