refs #8 Fix images_controller spec

--- a/app/views/delivered_images/show.html.erb
+++ b/app/views/delivered_images/show.html.erb
@@ -30,7 +30,7 @@
 
 <p>
   <strong>ImageNet categories:</strong>
-  <%= image.feature.categ_imagenet %>
+  <%= image.feature.categ_imagenet if image.feature %>
 </p>
 
 <h2>Detail:</h2>
