--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,9 @@
-<h1>Ispick prototype v2</h1>
+<h1>Ispick prototype v3</h1>
 <p>Ispick is an illustration curation service!</p>
 
-<%# image_tag asset_path('snowmiku0.jpg'), size: '600x375' %>
-<%= image_tag asset_path('icecave0.png'), size: '400x187' %>
+<%= link_to (image_tag asset_path('top_madoka.jpg')), 'http://ispick.tumblr.com/' %>
+<br>
+<br>
 <br>
 <% if user_signed_in? %>
   <%= link_to 'ログアウト', destroy_user_session_path, :method => :delete %>
@@ -10,9 +11,3 @@
   <%= link_to "twitterでログイン", user_omniauth_authorize_path(:twitter)  %>
 <% end %>
 <br>
-<%= link_to('User Home', { controller: 'users', action: 'home' }) %>
-<br>
-<br>
-<%= link_to('抽出画像一覧', { controller: 'images', action: 'index' }) %>
-<br>
-<%= link_to('うpされた嗜好画像一覧', { controller: 'target_images', action: 'index' }) %>
