refs #164 Update other pages

--- a/app/views/users/show_target_images.html.erb
+++ b/app/views/users/show_target_images.html.erb
@@ -1,7 +1,5 @@
-<h1>YOUR Target Images</h1>
+<h1>登録イラスト一覧</h1>
 <%= link_to 'New Target image', new_target_image_path %>
-<br>
-<%= link_to 'Back', controller: 'users', action: 'home' %>
 <br>
 
 <div class="wrap">
