--- a/app/views/users/show_favored_images.html.erb
+++ b/app/views/users/show_favored_images.html.erb
@@ -1,7 +1,4 @@
 <h1>Clipped Images</h1>
-<%= link_to 'Back', controller: 'users', action: 'home' %>
-<br>
-<%= link_to 'Download zip', controller: 'users', action: 'download_favored_images' %>
 <br>
 <p>
   <strong>Clipped images count:</strong>
@@ -12,13 +9,15 @@
   <%= bytes_to_kilobytes(get_total_size(@images)) %> KB<br>
   <%= bytes_to_megabytes(get_total_size(@images)) %> MB<br>
 </p>
+<%= link_to 'Download zip(Debug)', controller: 'users', action: 'download_favored_images' %>
 <br>
 
 <div class="wrap">
   <% @images.each do |image| %>
     <div class="box">
       <div class="boxInner">
-        <%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <%= link_to 'Unclip', image, method: :delete %>
+
         <%= link_to(image_tag(image.data.url), { controller: 'favored_images', action: 'show', id: image.id.to_s }) %>
         <div class="titleBox"><%= image.title.to_s %></div>
       </div>
