--- a/app/views/users/show_target_words.html.erb
+++ b/app/views/users/show_target_words.html.erb
@@ -1,6 +1,10 @@
-<h1>YOUR target_words</h1>
+<h1>登録タグ一覧</h1>
+カスタムキーワードを登録する：
 <br>
 <%= link_to 'New Target word', new_target_word_path %>
+<br>
+<br>
+データベースからタグを検索する：
 <br>
 <%= link_to 'Search Target words', search_target_words_path %>
 <br>
@@ -25,8 +29,7 @@
         <td><%# link_to 'Show', target_word %></td>
         <td><%= link_to 'このタグへの配信画像を見る', show_delivered_target_word_path(target_word) %></td>
 
-        <td><%= link_to get_enabled_html(target_word.enabled).html_safe, switch_target_word_path(target_word) %></td>
-        <td><%= link_to 'Edit', edit_target_word_path(target_word) %></td>
+        <!--<td><%= link_to get_enabled_html(target_word.enabled).html_safe, switch_target_word_path(target_word) %></td>-->
         <td><%= link_to 'Destroy', target_word, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
@@ -34,7 +37,5 @@
 </table>
 <br>
 <br>
-<p>「on」だと自動配信の対象になります。</p>
-<%= link_to 'Back', controller: 'users', action: 'home' %>
 
 <%= paginate_target_images(@message, @words) %>
