refs #174 Configure 'bootstrap-sass' gem
- Delete application.css and create scss file
- Edit application.rb

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,8 +10,13 @@
  *
  *= require_self
  *= require_tree .
+ *= require bootstrap-datepicker3
  *
  */
+
+@import "bootstrap";
+
+
 #footer {
   clear:  left;
   bottom: 0;
