--- a/app/views/users/show_favored_images.html.erb
+++ b/app/views/users/show_favored_images.html.erb
@@ -2,18 +2,18 @@
 <br>
 <p>
   <strong>Clipped images count:</strong>
-  <%= @images.count %>
+  <%= @favored_images.count %>
 </p>
 <p>
   <strong>Total size of clipped images in bytes:</strong><br>
-  <%= bytes_to_kilobytes(get_total_size(@images)) %> KB<br>
-  <%= bytes_to_megabytes(get_total_size(@images)) %> MB<br>
+  <%= bytes_to_kilobytes(get_total_size(@favored_images)) %> KB<br>
+  <%= bytes_to_megabytes(get_total_size(@favored_images)) %> MB<br>
 </p>
 <%= link_to 'Download zip(Debug)', controller: 'users', action: 'download_favored_images' %>
 <br>
 
 <div class="wrap">
-  <% @images.each do |image| %>
+  <% @favored_images.each do |image| %>
     <div class="box">
       <div class="boxInner">
         <%= link_to 'Unclip', image, method: :delete %>
@@ -25,4 +25,4 @@
   <% end %>
 </div>
 
-<%= paginate @images %>
+<%= paginate @favored_images %>
