--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,7 @@
  *= require_tree .
  *= require bootstrap-datepicker3
  *= require bootstrap_navbar_split_dropdowns
+ *= require rails_bootstrap_forms
  *
  */
 
