--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -3,15 +3,13 @@
 <p>
   <%= "<strong>Found #{@delivered_images_all.count} delivered_images.</strong".html_safe %>
   <br>
-  <br><br>
+  <br>
+  <br>
   配信日で絞り込む：
   <div class="input-group date" style="width: 200px;" align="right">
-    <%# text_field_tag 'date', '', 'data-behaviour'=>'datepicker' %>
     <input type="text" class="form-control" disabled><span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
   </div>
 </p>
-
-
 
 
 <%= paginate @delivered_images %>
@@ -22,6 +20,7 @@
     <% image = delivered_image.image %>
     <% next if delivered_image.avoided %>
 
+
     <div class="box">
       <div class="boxInner">
         <%= get_jst_string(delivered_image.created_at) + '配信' %>
@@ -30,15 +29,26 @@
         <br>
         <div class="favored">
           <div class="id"><%= delivered_image.id %></div>
-          <%= raw get_clip_string_styled(delivered_image) %>
+          <%= bs_dropdown_button_to 'Clip', style: delivered_image.favored ? "info" : "" , autoclose: false do %>
+            <li>
+              <%= bootstrap_form_tag url: { controller: 'image_boards', action: 'create' }, class: 'new_board_form' do |f| %>
+                <%= f.text_field :name, layout: :default, class: 'new_board_input' %>
+                <%= f.button 'New board', class: "new_board btn btn-primary", type: 'button' %>
+              <% end %>
+            </li>
+            <% current_user.image_boards.each do |board| %>
+              <li class="clip_button" ><%= board.name %></li>
+            <% end %>
+          <% end %>
         </div>
-
-        <%= link_to 'Hide', avoid_delivered_image_path(delivered_image), method: :put %>
+        <%= bs_button_to 'Hide', avoid_delivered_image_path(delivered_image), method: :put %>
 
         <%= link_to(image_tag(image.data.url(:thumb)), { controller: 'delivered_images', action: 'show', id: delivered_image.id.to_s }) %>
         <div class="titleBox"><%= image.title.to_s %></div>
       </div>
     </div>
+
+
   <% end %>
 </div>
 
