--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,36 @@
-<div class='logo'>
-  <%= link_to image_tag(asset_path('test_logo.png')), home_users_path, class: 'logo' %>
-</div>
 
-<%= render_navigation expand_all: true, renderer: :bootstrap, items: get_menu_items %>
+<%# navbar fixed: :top, role: "navigation" do navbar-fixed-top %>
+<nav class="navbar navbar-default" role="navigation">
+  <%= navbar_header brand: image_tag(asset_path('test_logo.png')), brand_link: '/home', class: 'logo' %>
+
+  <%= navbar_collapse do %>
+    <%= navbar_group class: 'User', id: 'menu' do %>
+      <%= navbar_dropdown 'User' do %>
+        <%# navbar_item 'プロフィール画像を変更する', '#' %>
+        <li>
+          <%= bootstrap_form_tag url: { controller: 'users', action: 'set_avatar', id: current_user.id } do |f| %>
+            <%= f.file_field :avatar, layout: :default %>
+            <%= f.submit '決定' %>
+          <% end %>
+        </li>
+        <%= navbar_dropdown_divider %>
+        <%= navbar_item 'ログアウト', destroy_user_session_path %>
+      <% end %>
+      <%= navbar_item 'Home', home_users_path %>
+      <%= navbar_item 'Boards', show_favored_images_users_path %>
+      <%= navbar_dropdown '好みの設定' do %>
+        <%= navbar_item '登録ワード一覧', show_target_words_users_path %>
+        <%= navbar_item '登録イラスト一覧', show_target_images_users_path %>
+      <% end %>
+      <%= navbar_dropdown 'DEBUG' do %>
+        <%= navbar_item '抽出画像一覧', images_path %>
+        <%= navbar_item 'うpされた嗜好画像一覧', target_images_path %>
+        <%= navbar_item 'イラスト判定のデバッグを行う', debug_illust_detection_users_path %>
+        <%= navbar_item 'トップページ', '/' %>
+        <%= navbar_item 'Resque', '/resque_web/overview#show' %>
+      <% end %>
+
+    <%= image_tag(current_user.avatar.url(:thumb), align: 'right') %>
+
+  <% end %>
+</nav><%# end %>
