refs #178 Tweak modal styles
- Change width and position of the window
- Edit scaffolds.css.scss

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,3 +35,11 @@ a.logo{
 a.logo:hover{
   background-color: #fff;
 }
+
+.modal-backdrop { background: none; }
+.modal {
+  position: fixed;
+  top:10%;
+  left:-50%;
+}
+.modal .modal-dialog { width: 300px; }
