--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<%# javascript_include_tag 'core' %>
+<%= javascript_include_tag 'core' %>
 <%= render 'shared/modal' %>
 
 <%# navbar fixed: :top, role: "navigation" do navbar-fixed-top %>
@@ -6,19 +6,16 @@
   <%= navbar_header brand: image_tag(asset_path('test_logo.png')), brand_link: '/home', class: 'logo' %>
   <%= navbar_collapse do %>
     <%= navbar_group class: 'User', id: 'menu' do %>
-      <%= navbar_dropdown 'User' do %>
-        <!--<li>
-          <%= bootstrap_form_tag url: { controller: 'users', action: 'create_avatar', id: current_user.id }, remote: true do |f| %>
-            <%= f.file_field :avatar, layout: :default %>
-            <%= f.submit '決定' %>
-          <% end %>
-        </li>-->
+      <%# navbar_dropdown 'User' do %>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle toggle-user" data-toggle="dropdown">User <b class="caret"></b></a>
+        <ul class="dropdown-menu"><!---->
         <li>
-          <%= link_to 'プロフィール画像を変更する', new_avatar_users_path, { :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
+          <%= link_to 'プロフィール画像を変更する', new_avatar_users_path, { :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window', class: 'dropdown-user' } %>
         </li>
         <%= navbar_dropdown_divider %>
         <%= navbar_item 'ログアウト', destroy_user_session_path %>
-      <% end %>
+      <%# end %></ul></li>
 
       <%= navbar_item 'Home', home_users_path %>
       <%= navbar_item 'Boards', show_favored_images_users_path %>
@@ -35,9 +32,7 @@
       <% end %>
     <% end %>
 
-    <%= image_tag(current_user.avatar.url(:thumb), align: 'right') %>
+    <%= image_tag(current_user.avatar.url(:thumb), align: 'right', class: 'current-avatar') %>
 
   <% end %>
-</nav><%# end %>
-
-<%# render 'shared/modal' %>
+</nav>
