refs #178 Align modal window position with the navbar item

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -38,8 +38,9 @@ a.logo:hover{
 
 .modal-backdrop { background: none; }
 .modal {
+  // ハードコーディング
   position: fixed;
-  top:10%;
-  left:-50%;
+  top: 5%;
+  left: -56.7%;
 }
 .modal .modal-dialog { width: 300px; }
