--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
 <div id='footer'>
   <hr>
-  <p>(c) 2014 Ispick. Powered by Ruby on Rails</p>
+  <p>(c) 2014 Ispick. All Rights Reserved.</p>
 </div>
