refs #183 Update the top page template

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,22 @@
-<h1>Ispick prototype v3</h1>
+<h1><strong>Ispick prototype v3</strong></h1>
 <p>Ispick is an illustration curation service!</p>
 
 <%= link_to (image_tag asset_path('top_madoka.jpg')), 'http://ispick.tumblr.com/' %>
 <br>
 <br>
 <br>
+<%= button_group do %>
+  <%= bs_button_to 'Facebookでアカウント作成', '/', class: "btn btn-default btn-block" %><br>
+  <%= bs_button_to 'Twitterでアカウント作成', 'user_omniauth_authorize_path(:twitter)', class: "btn btn-default btn-block" %><br>
+  <%= bs_button_to 'Pinterestでアカウント作成', '/', class: "btn btn-default btn-block" %><br>
+  <%= bs_button_to 'メールアドレスでアカウント作成', 'users/sign_up', class: "btn btn-default btn-block" %><br>
+<% end %>
+<br>
+<%= link_to '既にアカウントをお持ちの方はこちら', '/login_with_password' %>
+
+<h3>Debug</h3>
 <% if user_signed_in? %>
-  <%= link_to 'ログアウト', destroy_user_session_path, :method => :delete %>
+  <%= link_to 'ログアウト', destroy_user_session_path %>
 <% else %>
   <%= link_to "twitterでログイン", user_omniauth_authorize_path(:twitter)  %>
 <% end %>
