--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,23 +1,30 @@
 <h1><strong>Ispick prototype v3</strong></h1>
 <p>Ispick is an illustration curation service!</p>
 
-<%= link_to (image_tag asset_path('top_madoka.jpg')), 'http://ispick.tumblr.com/' %>
-<br>
-<br>
-<br>
-<%= button_group do %>
-  <%= bs_button_to 'Facebookでアカウント作成', '/', class: "btn btn-default btn-block" %><br>
-  <%= bs_button_to 'Twitterでアカウント作成', 'user_omniauth_authorize_path(:twitter)', class: "btn btn-default btn-block" %><br>
-  <%= bs_button_to 'Pinterestでアカウント作成', '/', class: "btn btn-default btn-block" %><br>
-  <%= bs_button_to 'メールアドレスでアカウント作成', 'users/sign_up', class: "btn btn-default btn-block" %><br>
-<% end %>
-<br>
-<%= link_to '既にアカウントをお持ちの方はこちら', '/login_with_password' %>
+<div class="top-image" style="position:relative;width:400px; height:300px; float:left; z-index: 1;">
+  <%= link_to (image_tag asset_path('top_madoka.jpg')), 'http://ispick.tumblr.com/', style: " z-index: 1;"%>
+</div>
 
-<h3>Debug</h3>
-<% if user_signed_in? %>
-  <%= link_to 'ログアウト', destroy_user_session_path %>
-<% else %>
-  <%= link_to "twitterでログイン", user_omniauth_authorize_path(:twitter)  %>
-<% end %>
+<div class="wrapper" style="position:relative;width:300px; height:300px; background-color:#E4F5F5; margin:10; padding:10px; border:10px; overflow:hidden;  z-index:2;">
+  <div class="btn-group-vertical" style="width:280px;">
+    <%= bs_button_to 'Facebookでアカウント作成', '/', class: "btn btn-default btn-block" %><br>
+    <%= bs_button_to 'Twitterでアカウント作成', 'user_omniauth_authorize_path(:twitter)', class: "btn btn-default btn-block" %><br>
+    <%= bs_button_to 'Pinterestでアカウント作成', '/', class: "btn btn-default btn-block" %><br>
+    <%= bs_button_to 'メールアドレスでアカウント作成', 'users/sign_up', class: "btn btn-default btn-block" %><br>
+    <div align="center">
+      <%= link_to '既にアカウントをお持ちの方はこちら', '/login_with_password' %>
+    </div>
+  </div>
+</div>
+
 <br>
+<br>
+
+<div>
+  <h3>Debug</h3>
+  <% if user_signed_in? %>
+    <%= link_to 'ログアウト', destroy_user_session_path %>
+  <% else %>
+    <%= link_to "twitterでログイン", user_omniauth_authorize_path(:twitter)  %>
+  <% end %>
+</div>
