--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,11 @@
 <h1><strong>Ispick prototype v3</strong></h1>
 <p>Ispick is an illustration curation service!</p>
 
-<div class="top-image" style="position:relative;width:400px; height:300px; float:left; z-index: 1;">
+<div class="top-image">
   <%= link_to (image_tag asset_path('top_madoka.jpg')), 'http://ispick.tumblr.com/', style: " z-index: 1;"%>
 </div>
 
-<div class="wrapper" style="position:relative;width:300px; height:300px; background-color:#E4F5F5; margin:10; padding:10px; border:10px; overflow:hidden;  z-index:2;">
+<div class="wrapper-oauth">
   <div class="btn-group-vertical" style="width:280px;">
     <%= bs_button_to 'Facebookでアカウント作成', '/', class: "btn btn-default btn-block" %><br>
     <%= bs_button_to 'Twitterでアカウント作成', 'user_omniauth_authorize_path(:twitter)', class: "btn btn-default btn-block" %><br>
@@ -19,7 +19,6 @@
 
 <br>
 <br>
-
 <div>
   <h3>Debug</h3>
   <% if user_signed_in? %>
