--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -20,3 +20,16 @@
   overflow  : hidden;
   z-index   : 2;
 }
+.wrapper-sign-in {
+  position  : relative;
+  width     : 300px;
+  height    : 500px;
+  background-color : #E4F5F5;
+  margin    : 10;
+  padding   : 10px;
+  border    : 10px;
+  overflow  : hidden;
+}
+.btn-group-oauth {
+  width     : 280px;
+}
