refs #183 Fix root template

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,14 +6,14 @@
 </div>
 
 <div class="wrapper-oauth">
-  <div class="btn-group-vertical" style="width:280px;">
+  <div class="btn-group-vertical btn-group-oauth">
     <%= bs_button_to 'Facebookでアカウント作成', '/', class: "btn btn-default btn-block" %><br>
     <%= bs_button_to 'Twitterでアカウント作成', 'user_omniauth_authorize_path(:twitter)', class: "btn btn-default btn-block" %><br>
     <%= bs_button_to 'Pinterestでアカウント作成', '/', class: "btn btn-default btn-block" %><br>
-    <%= bs_button_to 'メールアドレスでアカウント作成', 'users/sign_up', class: "btn btn-default btn-block" %><br>
-    <div align="center">
-      <%= link_to '既にアカウントをお持ちの方はこちら', '/login_with_password' %>
-    </div>
+    <%= bs_button_to 'メールアドレスでアカウント作成', '/sign_up', class: "btn btn-default btn-block" %><br>
+  </div>
+  <div align="center">
+    <%= link_to '既にアカウントをお持ちの方はこちら', '/signin_with_password' %>
   </div>
 </div>
 
