--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,18 @@
-<h2>Forgot your password?</h2>
+<h2>パスワードをお忘れの方</h2>
+<p>パスワードのリセット方法を、ご登録メールアドレスへお送りします。</p>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+<div class="btn-group-oauth">
+  <%= bootstrap_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+    <%= devise_error_messages! %>
+    <%= f.email_field :email, autofocus: true, placeholder: 'メールアドレス'  %>
+    <%= f.submit '送信' %>
+  <% end %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+  <br>
+  <div align="left">
+    <%= link_to '既にアカウントをお持ちの方はこちら', '/signin_with_password' %><br>
+    <%= link_to 'はじめて方はこちら', '/signup_with_password' %>
+  </div>
+</div>
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<%# render "devise/shared/links" %>
