refs #182 Hide modal background only within the specific css class

--- a/app/views/shared/_modal_image.html.erb
+++ b/app/views/shared/_modal_image.html.erb
@@ -1,8 +1,9 @@
 <div class="modal" id="modal-image" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-body">
-        test1
+      <div class="modal-body modal-image">
+        Details:
+        <%# render 'shared/show_image' %>
       </div>
     </div>
   </div>
