refs #182 #101 Extract the part of '_delivered_image' template into 'shared/_show_image'

--- a/app/views/shared/_modal_image.html.erb
+++ b/app/views/shared/_modal_image.html.erb
@@ -1,9 +1,8 @@
 <div class="modal" id="modal-image" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
   <div class="modal-dialog">
     <div class="modal-content">
+      <!-- javascriptからpartial templateをbodyに描画する -->
       <div class="modal-body modal-image">
-        Details:
-        <%# render 'shared/show_image' %>
       </div>
     </div>
   </div>
