refs #182 #101 Show detail of images with modal dialog in the debug view
Create template files to render with modal.

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -62,6 +62,6 @@
 </p>
 
 <br>
-<%= image_tag @image.data.url %>
+<%= image_tag @image.data.url(:medium) %>
 <br>
 <%= link_to 'Back', images_path %>
