--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,10 +1,12 @@
+<%= render 'shared/modal_image' %>
 <h1>Listing images</h1>
 
 <ul class="boxline">
 <% @images.each do |image| %>
   <li>
-    <%= link_to(image_tag(image.data.url(:thumb)),
+    <%# link_to(image_tag(image.data.url(:thumb)),
       { controller: 'images', action: 'show', id: image.id.to_s }) %>
+    <%= link_to image_tag(image.data.url(:thumb)), { controller: 'images', action: 'show', id: image.id, remote: true, 'data-toggle' => "modal", 'data-target' => '#modal-image' } %>
   </li>
 <% end %>
 </ul>
