--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -13,3 +13,5 @@
   left: -68.2%;//-56.7%;
 }
 .modal.modal-avatar .modal-dialog { width: 250px; }
+
+.modal.modal-images .modal-dialog { width: 640px; }
