--- a/app/views/shared/_modal_image.html.erb
+++ b/app/views/shared/_modal_image.html.erb
@@ -1,4 +1,4 @@
-<div class="modal" id="modal-image" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
+<div class="modal modal-images" id="modal-image" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
   <div class="modal-dialog">
     <div class="modal-content">
       <!-- javascriptからpartial templateをbodyに描画する -->
