--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag 'core' %>
+<%# javascript_include_tag 'core' %>
 <%= render 'shared/modal' %>
 
 <%# navbar fixed: :top, role: "navigation" do navbar-fixed-top %>
