--- a/app/views/shared/_modal_board.html.erb
+++ b/app/views/shared/_modal_board.html.erb
@@ -1,11 +1,8 @@
-<div class="modal modal-board" id="modal-board" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
+<div class="modal modal-boards" id="modal-board" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body modal-board">
-        <!--<%= bootstrap_form_tag url: { controller: 'users', action: 'create_avatar', id: current_user.id } do |f| %>
-          <%= f.file_field :avatar, layout: :default %>
-          <%= f.submit '決定' %>
-        <% end %>-->
+
       </div>
     </div>
   </div>
