--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -1,4 +1,5 @@
 <%= javascript_include_tag 'users_home' %>
+<%= javascript_include_tag 'core' %>
 <%= render 'shared/modal_image' %>
 <%= render 'shared/modal_board' %>
 
@@ -31,18 +32,6 @@
         <br>
         <div class="favored">
           <div class="id"><%= delivered_image.id %></div>
-
-          <!--<%= bs_dropdown_button_to 'Clip', style: delivered_image.favored ? "info" : "" , autoclose: false do %>
-            <%= bootstrap_form_tag url: { controller: 'image_boards', action: 'create' }, class: 'new_board_form' do |f| %>
-              <%= f.text_field :name, layout: :default, class: 'new_board_input' %>
-              <%= f.button 'New board', class: "new_board btn btn-primary", type: 'button' %>
-            <% end %>
-            <% current_user.image_boards.each do |board| %>
-              <li class="clip_button btn btn-default btn-group-justified" ><%= board.name %></li>
-            <% end %>
-          <% end %>-->
-
-
           <%= bs_button_to 'Clip', { controller: 'image_boards', action: 'boards', :remote => true, image: delivered_image.id, 'data-toggle' => "modal", 'data-target' => '#modal-board', style: delivered_image.favored ? "info" : "" } %>
         </div>
         <%= bs_button_to 'Hide', avoid_delivered_image_path(delivered_image), method: :put, class: 'btn-default' %>
