refs #187 Edit misc things

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,7 @@
  *= require scaffolds
  *= require users
  *= require core
+ *= require welcome
  *= require bootstrap-datepicker3
  *= require rails_bootstrap_forms
  *
