--- a/app/views/target_words/show_delivered.erb
+++ b/app/views/target_words/show_delivered.erb
@@ -7,6 +7,7 @@
 <br>
 <div class="wrap">
   <% @delivered_images.each do |delivered_image| %>
+    <% image = delivered_image.image %>
     <div class="box">
       <div class="boxInner">
         <div class="favored">
@@ -16,8 +17,8 @@
 
         <%= link_to 'Hide', avoid_delivered_image_path(delivered_image), method: :put %>
         <%= link_to 'Destroy', delivered_image, method: :delete, data: { confirm: 'Are you sure?' } %>
-        <%= link_to(image_tag(delivered_image.data.url), { controller: 'delivered_images', action: 'show', id: delivered_image.id.to_s }) %>
-        <div class="titleBox"><%= delivered_image.title.to_s %></div>
+        <%= link_to(image_tag(image.data.url(:thumb)), { controller: 'delivered_images', action: 'show', id: image.id.to_s }) %>
+        <div class="titleBox"><%= image.title.to_s %></div>
       </div>
     </div>
   <% end %>
