--- a/app/views/favored_images/_favored_image.html.erb
+++ b/app/views/favored_images/_favored_image.html.erb
@@ -1,5 +1,4 @@
-<p id="notice"><%= notice %></p>
-
+<%= render partial: 'shared/render_image', locals: { image: @favored_image } %>
 <p>
   <strong>Title:</strong>
   <%= @favored_image.title %>
@@ -19,7 +18,3 @@
   <%= bytes_to_kilobytes(@favored_image.data.size) %> KB<br>
   <%= bytes_to_megabytes(@favored_image.data.size) %> MB<br>
 </p>
-
-<br>
-<%= image_tag @favored_image.data.url %>
-<br>
