--- a/app/views/target_words/_form.html.erb
+++ b/app/views/target_words/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@target_word) do |f| %>
+<%= bootstrap_form_for(@target_word, control_col: "col-sm-10") do |f| %>
   <% if @target_word.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@target_word.errors.count, "error") %> prohibited this target_word from being saved:</h2>
@@ -11,10 +11,12 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :word %><br>
-    <%= f.text_field :word %>
+  <div class="row">
+    <div class="col-lg-2">
+      <%= f.text_field :word %>
+    </div>
   </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
